# ubiquiti-protect-onvif-event-listener

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  CPPLINT.cfg  Makefile  README.md  WORKSPACE  detection_recorder.cpp  detection_recorder.hpp  main.cpp  onvif-recorder.service  onvif_listener.cpp  onvif_listener.hpp  ubv_extract.cpp  ubv_thumbnail.cpp  ubv_thumbnail.hpp  unifi_camera_config.cpp  unifi_camera_config.hpp
.claude/: settings.local.json
bazel/: BUILD.bazel  arm64_sysroot.bzl  pkg_config.bzl
test/: BUILD.bazel  Makefile  bench_onvif_listener.cpp  camera_emulators.cpp  camera_emulators.hpp  onvif_camera_emulator.cpp  onvif_camera_emulator.hpp  test_detection_recorder.cpp  test_onvif_listener.cpp  test_ubv_thumbnail.cpp
test/testdata/: bench_onvif.jsonl  cell_motion_camera_20260321.jsonl  cell_motion_no_events_20260321.jsonl  dahua_dh_sd4a425db_hny_20260219.jsonl  hikvision_compatible_20260219.jsonl  html_404_camera_20260321.jsonl  onvif_raw_20260219_085752.jsonl  thingino_wyze_20260321.jsonl  unvr_cell_motion_119_20260321.jsonl  unvr_cell_motion_173_20260321.jsonl  unvr_cell_motion_1_45_20260321.jsonl  unvr_cell_motion_1_47_20260321.jsonl  unvr_cell_motion_227_20260321.jsonl  unvr_cell_motion_245_20260321.jsonl  unvr_cell_motion_251_20260321.jsonl  unvr_cell_motion_78_20260321.jsonl
