config_setting(
    name = "is_arm64",
    constraint_values = ["@platforms//cpu:aarch64"],
)

cc_library(
    name = "onvif_camera_emulator",
    srcs = ["onvif_camera_emulator.cpp"],
    hdrs = ["onvif_camera_emulator.hpp"],
    deps = select({
        ":is_arm64": ["@arm64_sysroot//:libmicrohttpd"],
        "//conditions:default": ["@libmicrohttpd"],
    }),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "camera_emulators",
    srcs = ["camera_emulators.cpp"],
    hdrs = ["camera_emulators.hpp"],
    deps = [
        ":onvif_camera_emulator",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)

filegroup(
    name = "hikvision_raw_log",
    srcs = ["testdata/hikvision_compatible_20260219.jsonl"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "dahua_raw_log",
    srcs = ["testdata/dahua_dh_sd4a425db_hny_20260219.jsonl"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cell_motion_raw_log",
    srcs = ["testdata/cell_motion_camera_20260321.jsonl"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "test_onvif_listener",
    srcs = ["test_onvif_listener.cpp"],
    args = [
        "$(location //test:hikvision_raw_log)",
        "$(location //test:dahua_raw_log)",
        "$(location //test:cell_motion_raw_log)",
    ],
    data = [
        "//test:hikvision_raw_log",
        "//test:dahua_raw_log",
        "//test:cell_motion_raw_log",
    ],
    deps = [
        "//:onvif_listener",
        ":camera_emulators",
        ":onvif_camera_emulator",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "test_detection_recorder",
    srcs = ["test_detection_recorder.cpp"],
    data = [
        "testdata/snapshot_108.jpg",
        "testdata/snapshot_109.jpg",
    ],
    deps = [
        "//:detection_recorder",
        "//:ubv_thumbnail",
        ":onvif_camera_emulator",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "test_ubv_thumbnail",
    srcs = ["test_ubv_thumbnail.cpp"],
    data = [
        "testdata/snapshot_108.jpg",
        "testdata/snapshot_109.jpg",
    ],
    deps = [
        "//:ubv_thumbnail",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)

filegroup(
    name = "bench_onvif_raw_log",
    srcs = ["testdata/bench_onvif.jsonl"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "bench_onvif_listener",
    srcs = ["bench_onvif_listener.cpp"],
    args = ["$(location //test:bench_onvif_raw_log)"],
    data = ["//test:bench_onvif_raw_log"],
    deps = [
        "//:onvif_listener",
        ":camera_emulators",
        ":onvif_camera_emulator",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)
